# yandex-speechkit-lib-python

./: .YANDEX_PRIVATE_KEY.txt.gpg  .gitignore  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  DOCS.md  LICENSE.txt  LongAudioRecognizion.py  README.md  YANDEX_PRIVATE_KEY.txt.enc  requipments.txt  requirements.txt  setup.cfg  setup.py  speechkit.py
.github/workflows/: publish-to-pypi.yml  python-package.yml
docs/: requirements.txt
docs/source/: auth.rst  conf.py  exceptions.rst  index.rst  modules.rst  speechkit.rst  utils.rst
examples/: LongAudioRecognizion.py  long_audio_recognition.py  streaming_recognize.py
speechkit/: speechkit.py
src/speechkit/: __init__.py  _auth.py  _synthesis.py  auth.py  exceptions.py  utils.py
src/speechkit/_recognition/: streaming_recognition.py  sync_recognition.py
src/speechkit/_recognition/google/api/: annotations_pb2.py  http_pb2.py
src/speechkit/_recognition/yandex/cloud/ai/stt/v2/: stt_service_pb2.py  stt_service_pb2_grpc.py
src/speechkit/_recognition/yandex/cloud/operation/: operation_pb2.py
src/tests/: test_auth.py  test_exceptions.py  test_long_audio_recognition.py  test_short_audio_recognition.py  test_speech_synthesis.py  test_speechkit.py  test_streaming_recognition.py  test_utils.py
