[metadata]
name = speechkit
version = 1.4.0
author = Tikhon Petrishchev
author_email = tikhon.petrishchev@gmail.com
description = Python SDK for Yandex Speechkit API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TikhonP/yandex-speechkit-lib-python
project_urls =
    Bug Tracker = https://github.com/TikhonP/yandex-speechkit-lib-python/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    requests
    boto3
package_dir =
    = src
python_requires = >=3.6

[options.packages.find]
where = src
