[metadata]
name = speechkit
version = 2.0.1
author = Tikhon Petrishchev
author_email = tikhon.petrishchev@gmail.com
description = Python SDK for Yandex Speechkit API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TikhonP/yandex-speechkit-lib-python
project_urls =
    Bug Tracker = https://github.com/TikhonP/yandex-speechkit-lib-python/issues
    Documentation = https://yandex-speechkit-lib-python.readthedocs.io/en/latest/index.html
    GitHub = https://github.com/TikhonP/yandex-speechkit-lib-python
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    boto3
    requests
    grpcio-tools >=1.39.0
    pyjwt >=2.1.0
    cryptography
package_dir =
    =src
python_requires = >=3.6

[options.packages.find]
where = src
